<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fitness Trainer</string>
    <string name="undefined">Undefined</string>
    <string name="empty"> </string>
    <!-- Menu Items -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="m1">Exercises</string>
    <string name="m2">Workouts</string>
    <string name="m3">Articles</string>
    <string name="m4">Settings</string>
    <string name="m5">Share</string>
    <string name="m6">About</string>
    <!-- Menus -->
    <string name="search">Search</string>
    <string name="sort_az">Sort A-Z</string>
    <string name="menu_edit">Edit</string>
    <!-- Workouts -->
    <string name="exs_count">Exercises count:</string>
    <string name="wkt_adding">Workout adding</string>
    <string name="wkt_title">Title</string>
    <!-- Description -->
    <string name="description_steps">Steps:</string>
    <string name="description_tips">Advice:</string>
    <string name="description_reps">Repetitions:</string>
    <string name="description_weight">Weight:</string>
    <string name="add_to_wkt">Add to workout</string>
    <string name="confirm_changes">Confirm changes</string>
    <!-- Design -->
    <string name="title">Title</string>
    <string name="type">type</string>
    <string name="primary">primary</string>
    <!-- Settings -->
    <string name="appearance">Appearance</string>
    <string name="lang">Language</string>
    <string name="lang_eng">English</string>
    <string name="lang_rus">Russian</string>
    <string name="theme">Color theme</string>
    <string name="theme_default">Default</string>
    <string name="theme_dark">Dark</string>
    <string name="text_size">Text size</string>
    <string name="text_small">Small</string>
    <string name="text_default">Default</string>
    <string name="text_large">Large</string>
    <string name="general">General</string>
    <string name="kilogram">Kilogram</string>
    <string name="pound">Pound</string>
    <string name="unit">Weight unit</string>
    <string name="unit_kg">Kg</string>
    <string name="unit_lb">Lbs</string>
    <!-- Articles -->
    <string name="isometric">Isometric exercises</string>
    <string name="isolation">Isolation exercises</string>
    <string name="compound">Compound exercises</string>
    <string name="top8for_weight_loss">Top 8 best exercises for weight loss</string>
    <string name="exc_type1">isometric</string>
    <string name="exc_type2">isolation</string>
    <string name="exc_type3">compound</string>
    <!-- About -->
    <string-array name="about_text">
        <item>The fitness trainer program is designed to help with physical activity.</item>
        <item>Thanks to the "fitness trainer" you can:</item>
        <item>- quickly learn suitable or just new exercises</item>
        <item>- create and conveniently use a detailed training plan</item>
        <item>- learn something new about fitness and much more</item>
        <item>This program was developed as a graduation project by
            a student of Polotsk State University, group 17-VS.</item>
    </string-array>
    <!-- ConfirmExitDialog -->
    <string name="exit_dialog_title">Confirm exit</string>
    <string name="exit_dialog_message">Are you sure you want to exit?</string>
    <string name="exit_dialog_positive">Yes</string>
    <string name="exit_dialog_negative">No</string>
    <!-- Toasts -->
    <string name="title_is_empty">Title is empty!</string>
    <string name="workout_exist">Workout with this title already exist!</string>
    <string name="reps_not_zero">Reps cannot be 0!</string>
    <string name="reps_not_empty">Reps cannot be empty!</string>
    <string name="weight_not_zero">Weight cannot be 0!</string>
    <string name="weight_not_empty">Weight cannot be empty!</string>
    <string name="reps_weight_not_zero">Reps and weight cannot be 0!</string>
    <string name="reps_weight_not_empty">Reps and weight cannot be empty!</string>
    <!-- Arrays -->
    <array name="lang_entries">
        <item>@string/lang_eng</item>
        <item>@string/lang_rus</item>
    </array>
    <string-array name="lang_values">
        <item>en</item>
        <item>ru</item>
    </string-array>
    <string-array name="theme_entries">
        <item>@string/theme_default</item>
        <item>@string/theme_dark</item>
    </string-array>
    <string-array name="text_size_entries">
        <item>@string/text_small</item>
        <item>@string/text_default</item>
        <item>@string/text_large</item>
    </string-array>
    <string-array name="appearance_items">
        <item>@string/lang</item>
        <item>@string/theme</item>
        <item>@string/text_size</item>
    </string-array>
    <string-array name="articles">
        <item>@string/isometric</item>
        <item>@string/isolation</item>
        <item>@string/compound</item>
        <item>@string/top8for_weight_loss</item>
    </string-array>
    <string-array name="exc_types">
        <item>@string/exc_type1</item>
        <item>@string/exc_type2</item>
        <item>@string/exc_type3</item>
    </string-array>
    <string-array name="unit_entries">
        <item>@string/kilogram</item>
        <item>@string/pound</item>
    </string-array>
    <string-array name="unit_values">
        <item>@string/unit_kg</item>
        <item>@string/unit_lb</item>
    </string-array>
</resources>