<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_exercises"
            android:title="@string/m1"/>
        <item android:id="@+id/nav_workouts"
            android:icon="@drawable/ic_workouts"
            android:title="@string/m2"/>
        <item android:id="@+id/nav_articles"
            android:icon="@drawable/ic_article"
            android:title="@string/m3"/>
        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/m4"/>
        <item android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/m5"/>
        <item android:id="@+id/nav_aboutapp"
            android:icon="@drawable/ic_about"
            android:title="@string/m6"/>
    </group>

</menu>