<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/description_margin"
        android:gravity="start">

        <TextView
            android:id="@+id/description_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/undefined"
            android:textAlignment="viewStart"
            android:textSize="@dimen/description_title" />

            <TextView
                android:id="@+id/description_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_title"
                android:layout_marginTop="@dimen/description_margin"
                android:text="@string/undefined"
                android:textAlignment="viewStart"
                android:textSize="@dimen/description_type"
                android:textColor="?attr/colorPrimary"/>

            <TextView
                android:id="@+id/description_primer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_type"
                android:layout_marginTop="@dimen/description_margin"
                android:text="@string/undefined"
                android:textAlignment="viewStart"
                android:textSize="@dimen/description_primer"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/description_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/description_margin"
            android:layout_below="@id/description_primer"
            android:foreground="?selectableItemBackground"
            android:clickable="false"
            android:focusable="false"
            android:visibility="gone"
            card_view:cardBackgroundColor="?attr/colorPrimarySurface"
            card_view:cardCornerRadius="8sp"
            card_view:contentPadding="4sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/description_repeats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:textSize="@dimen/description_cv_text"/>

                <TextView
                    android:id="@+id/description_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/description_cv_text"
                    android:visibility="gone"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/description_image"
                android:background="?android:attr/editTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_cv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/description_margin"
                tools:ignore="ContentDescription"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/description_margin"
                android:layout_below="@id/description_image"
                android:foreground="?selectableItemBackground"
                android:clickable="false"
                android:focusable="false"
                card_view:cardBackgroundColor="?attr/colorPrimarySurface"
                card_view:cardCornerRadius="8sp"
                card_view:contentPadding="4sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description_steps"
                        android:textSize="@dimen/description_steps"/>

                    <TextView
                        android:id="@+id/description_steps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/description_steps"/>

                    <TextView
                        android:id="@+id/description_tips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description_tips"
                        android:textSize="@dimen/description_tips"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/description_tips_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/description_tips"
                        android:visibility="gone"/>

                </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>